[BOD-1715] Fix text align in CardMenu button

--- a/src/atoms/CardMenu/CardMenu.scss
+++ b/src/atoms/CardMenu/CardMenu.scss
@@ -15,6 +15,7 @@
   border: none;
   text-decoration: none;
   cursor: default;
+  text-align: left;
   &:hover {
     text-decoration: none;
   }
